# MicroVireo

./: .gitignore  CMakeLists.txt  WSL VS Code.lnk
cmake/: vireo_features.cmake
make-it/: CMakeLists.txt
platform/: readme.md
platform/picog/: build_increment.cmake  build_timestamp.cmake  picog.cmake  version.cmake  version_build.cmake
platform/picog/include/: picog.h
platform/picog/include/picog/: build.h  common.h  gpio.h  i2c.h  version.h
platform/rp2040/: CMakeLists.txt  main.cpp  micromain.cpp  vireo_config.cmake
platform/rp2040/boards/PICO/: vireoboard.cmake
platform/rp2040/boards/pico/: picog_board.cmake  picog_board.h  vireoboard.cmake  vireoboard.h
platform/rp2040/boards/sfpromicro/: picog_board.cmake  picog_board.h  vireoboard.h
platform/rp2040/io/: pico_gpio.cpp  pico_i2c.cpp  pico_io.cpp  pico_persist.cpp
port/rp2040/: CMakeLists.txt  main.cpp  micromain.cpp  rp2040_common.cmake
port/rp2040/boards/PICO/: vireoboard.cmake
port/rp2040/io/: pico_gpio.cpp
source/: CMakeLists.txt  vireo.cmake
source/core/: Array.cpp  Assert.cpp  CloseReference.cpp  Date.cpp  Events.cpp  ExecutionContext.cpp  GenericFunctions.cpp  NumericString.cpp  Platform.cpp  TDCodecVia.cpp  Thread.cpp  TypeAndDataManager.cpp  VirtualInstrument.cpp  core.cmake  vireo.cmake
source/include/: BuildConfig.h  DataTypes.h  DebuggingToggles.h  ExecutionContext.h  Platform.h  TypeAndDataManager.h  VirtualInstrument.h
source/io/: FileIO.cpp  io.cmake
